[package]
name = "my_gtfs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
gtfs-structures = "0.41.3"
multimap = "0.10.0"
ron = "0.8.1"
serde = { version = "1.0.204", features = ["derive"] }
spinoff = "0.8.0"
structural-convert = "0.13.0"
unidecode = "0.3.0"
bus_model = { path = "/home/eriizu/Arena/20240809_model_bus" }
